--- a/CF_SVD_by_Ibrahim_Abouelseoud/Collaborative_SVD_Final_Ibrahim.ipynb
+++ b/CF_SVD_by_Ibrahim_Abouelseoud/Collaborative_SVD_Final_Ibrahim.ipynb
@@ -26,9 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "items_df = pd.read_csv('item_metadata.csv',usecols=[0]) #useless don't run cause real data is missing them"
@@ -44,9 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_df = pd.read_csv('train.csv',sep=',',usecols=['user_id','action_type','reference'])#,'impressions'])#,engine='python')"
@@ -55,9 +51,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "train_df.dropna(inplace=True)"
@@ -66,9 +60,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "user_ids=train_df.user_id.unique().tolist()"
@@ -150,9 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "utility_csr_mtrx=csr_matrix(shape,dtype=np.float32)"
@@ -229,9 +219,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# https://stackoverflow.com/questions/8955448/save-load-scipy-sparse-csr-matrix-in-portable-data-format"
@@ -240,9 +228,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "np.savez(\"csr_utility_mtrx\", data=utility_csr_mtrx.data, indices=utility_csr_mtrx.indices,indptr=utility_csr_mtrx.indptr, shape=utility_csr_mtrx.shape)"
@@ -258,9 +244,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "loader = np.load(\"csr_utility_mtrxScipy.npz\") #loading\n",
@@ -310,9 +294,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# https://antoinevastel.com/machine%20learning/python/2016/02/14/svd-recommender-system.html"
@@ -328,9 +310,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "from scipy.sparse.linalg import svds\n",
@@ -349,9 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def user_item_predict(U,V,userIdx,itemIdx):\n",
@@ -366,9 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def recommends_for_user(U,V, userIdx, num_recom=25, show_similarity=False):\n",
@@ -429,9 +405,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "u,s,v=SVD(utility_csr_mtrx)"
@@ -766,9 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_df = pd.read_csv('test.csv',usecols=['user_id','session_id','timestamp','step','user_id','action_type','reference','impressions'])"
@@ -784,9 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "testIdx_user_start=len(user_ids)"
@@ -835,9 +805,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "user_ids.extend(test_df.user_id.unique().tolist())"
@@ -913,9 +881,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_df_noNan=test_df.dropna(subset=['action_type','reference'])"
@@ -924,9 +890,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "testIdx_hotel_start=len(hotel_ids)"
@@ -1021,9 +985,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "utility_csr_mtrx.resize((len(user_ids),len(hotel_ids)))"
@@ -1074,9 +1036,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# save matrix with testing set loaded\n",
@@ -1093,9 +1053,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# If not already loaded\n",
@@ -1106,9 +1064,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "test_refNan=test_df[test_df['reference'].isnull()].dropna(subset=['impressions'])"
@@ -1117,9 +1073,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#Won't pass hotel_ids index to this function but will use it globally to save processor jump time\n",
@@ -1139,9 +1093,29 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rec_from_impressions(U,V, userIdx,impressions):\n",
+    "    res=\"\" #string not array to upload and compare\n",
+    "    hotels=impressions.split(\"|\")\n",
+    "    recs = []\n",
+    "    for it_id in hotels:\n",
+    "        try:\n",
+    "            it_idx=hotel_ids.index(it_id)\n",
+    "            recs.append((it_id,user_item_predict(U,V,userIdx,it_idx)))\n",
+    "        except ValueError:\n",
+    "            recs.append((it_id,-30))\n",
+    "    final_rec = [i[0] for i in sorted(recs,key=lambda x: x[1],reverse=True)]\n",
+    "    for i in final_rec:\n",
+    "        res=res+i+\" \"\n",
+    "    return res\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": [
     "u,s,v=SVD(utility_csr_mtrx)"
@@ -1150,20 +1124,20 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "with open('Gamma_IbrahimAbouelseoud_SVD.csv', 'a') as file:\n",
+    "with open('Delta_IbrahimAbouelseoud_SVD.csv', 'a') as file:\n",
     "    totalSize=str(test_refNan.shape[0])\n",
     "    file.write('user_id'+ ',' + 'session_id'+ ',' +'timestamp'+ ',' +'step'+ ',' +'item_recommendations'+ '\\n')\n",
-    "    for i,entry in test_refNan.iterrows():\n",
-    "        rec=translate_rec_n_filter(recommends_for_user(u,v, user_ids.index(entry['user_id']), num_recom=None),entry['impressions'])\n",
-    "        file.write(str(entry['user_id'])+ ',' +str(entry['session_id'])+ ',' +str(entry['timestamp'])+ ',' +str(entry['step'])+ ',' +str(rec))\n",
+    "    i=0\n",
+    "    for _,entry in test_refNan.iterrows():\n",
+    "        rec=get_rec_from_impressions(u,v, user_ids.index(entry['user_id']),entry['impressions'])\n",
+    "        file.write(str(entry['user_id'])+ ',' +str(entry['session_id'])+ ',' +str(entry['timestamp'])+ ',' +str(entry['step'])+ ',' +str(rec)+ '\\n')\n",
+    "        i=i+1\n",
     "        if(i%1000==0):\n",
     "            file.flush()\n",
-    "            print(str(i)+\" out of\"+totalSize)"
+    "            print(str(i)+\" out of \"+totalSize)"
    ]
   }
  ],
@@ -1183,7 +1157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
